--- a/src/components/contactStyles.css
+++ b/src/components/contactStyles.css
@@ -1,21 +1,14 @@
-section__contact {
+.section__contact {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: #000824;
 }
 
 .container__contact {
   width: 100%;
-  min-height: 30rem;
-  padding: 2rem 8rem;
-  background-color: #2d2d2d;
   color: #fff;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  flex: 1 1 auto;
 }
 
 .first-half {
@@ -44,6 +37,9 @@ section__contact {
   cursor: pointer;
   border-radius: 50%;
   border: none;
+  display: grid;
+  place-items: center;
+  padding: 0.3rem;
 }
 
 .footer-icon-btn .icon {
@@ -75,7 +71,7 @@ section__contact {
 }
 
 .social__media h3 {
-  margin-top: 2rem;
+  margin-top: 0rem;
 }
 
 .social__media h3 {
@@ -93,13 +89,13 @@ section__contact {
 }
 
 .social__media p {
-  margin-bottom: 2rem;
+  margin-bottom: 7rem;
 }
 
 .info__contact {
   display: flex;
   justify-content: center;
-  margin-right: 8rem;
+  margin-right: 6rem;
 }
 
 .info__contact ul {
@@ -112,7 +108,7 @@ section__contact {
 }
 
 .contact-items {
-  margin-top: 2rem;
+  margin-top: 0;
 }
 
 .title {
@@ -122,10 +118,24 @@ section__contact {
 .container__form {
   display: grid;
   place-items: center;
-  padding: 3rem;
+  padding: 2rem;
   border-radius: 20px;
   border: 1px solid #000000;
   box-shadow: 0 0 25px #000000;
+}
+
+.container__copyright {
+  width: 100%;
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.container__copyright p {
+  font-family: "Lato", sans-serif;
+  font-size: 1rem;
+  color: #fff;
 }
 
 .container__copyright span {
@@ -134,4 +144,88 @@ section__contact {
 
 .first-half hr {
   border: 1px solid rgb(183, 183, 183);
+  display: none;
+}
+
+.container__contact__main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #2d2d2d;
+  padding: 2rem 8rem;
+  gap: 1rem;
+  border: none;
+}
+
+@media screen and (max-width: 22.5em) {
+  .container__contact {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .first-half h1 {
+    font-size: 1.8rem;
+  }
+
+  .contact-info {
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .info__contact {
+    margin-right: 0;
+    justify-content: left;
+  }
+
+  .social__media h3 {
+    font-size: 1rem;
+  }
+
+  .social__media p,
+  .list-icons {
+    margin-bottom: 0;
+  }
+
+  .contact-items {
+    margin-top: 0;
+  }
+
+  .container__form {
+    padding: 1.8rem;
+  }
+
+  .container__copyright {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .container__copyright p {
+    font-size: 0.5rem;
+  }
+
+  .container__contact__main {
+    padding: 1rem 2rem;
+    gap: 1rem;
+  }
+
+  .footer-icon-btn {
+    height: 2rem;
+    width: 2rem;
+  }
+
+  .footer-icon-btn .icon {
+    height: 1rem;
+    width: 1rem;
+  }
+
+  .info__contact ul {
+    font-family: "Lato", sans-serif;
+  }
+
+  .contact-items {
+    font-size: 1rem;
+    gap: 0.6rem;
+  }
 }
