--- a/src/components/heroStyles.css
+++ b/src/components/heroStyles.css
@@ -51,17 +51,21 @@
   text-align: left;
 }
 
-.btns {
+.btns-hero {
   display: flex;
   flex-direction: row;
   gap: 1.2rem;
   margin-top: 1.5rem;
 }
 
+.second {
+  display: none;
+}
+
 .resume-btn {
   padding: 0.6rem;
   width: 8rem;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: transparent;
   border: 1px solid #000000;
   color: #2d2d2d;
@@ -72,7 +76,7 @@
 .hire-me-btn {
   padding: 0.6rem;
   width: 8rem;
-  border-radius: 20px;
+  border-radius: 10px;
   background-color: #ff613e;
   color: #fff;
   border: none;
@@ -164,5 +168,58 @@
   }
   100% {
     transform: translateX(-100%);
+  }
+}
+
+@media screen and (max-width: 22.5em) {
+  .container__hero {
+    flex-direction: column;
+    padding: 2rem 2rem;
+    margin-top: 3.5rem;
+    gap: 1rem;
+  }
+
+  .intro {
+    width: 100%;
+  }
+
+  .picture {
+    width: 100%;
+    height: 35rem;
+  }
+
+  .intro h1 {
+    font-size: 2rem;
+  }
+
+  .intro h3 {
+    font-size: 1rem;
+  }
+
+  .intro p {
+    font-size: 0.6rem;
+  }
+
+  .located .icon {
+    height: 1rem;
+    width: 1rem;
+  }
+
+  .located {
+    margin-top: 1rem;
+  }
+
+  .blob3 {
+    top: -80%;
+  }
+
+  .blob {
+    left: -50%;
+    top: 10%;
+  }
+
+  .btns-hero {
+    width: 100%;
+    justify-content: space-between;
   }
 }
