--- a/src/components/projectStyles.css
+++ b/src/components/projectStyles.css
@@ -15,6 +15,7 @@
   justify-content: flex-start;
   align-items: center;
   gap: 2rem;
+  border: none;
 }
 
 .container__project h3 {
@@ -42,4 +43,14 @@
   flex-direction: column;
   width: 100%;
   gap: 3rem;
+}
+
+@media screen and (max-width: 22.5em) {
+  .container__project {
+    padding: 2rem 2rem;
+  }
+
+  .container__project p {
+    font-size: 0.8rem;
+  }
 }
