--- a/src/components/heroStyles.css
+++ b/src/components/heroStyles.css
@@ -175,7 +175,7 @@
   .container__hero {
     flex-direction: column;
     padding: 2rem 2rem;
-    margin-top: 3.5rem;
+    margin-top: 4rem;
     gap: 1rem;
   }
 
@@ -189,15 +189,16 @@
   }
 
   .intro h1 {
-    font-size: 2rem;
+    font-size: 3rem;
+    line-height: 50px;
   }
 
   .intro h3 {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 
   .intro p {
-    font-size: 0.6rem;
+    font-size: 1rem;
   }
 
   .located .icon {
