--- a/src/components/projectCardStyles.css
+++ b/src/components/projectCardStyles.css
@@ -75,6 +75,39 @@
   flex-direction: row-reverse;
 }
 
+@keyframes slidefromRight {
+  0% {
+    transform: translateX(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slidefromLeft {
+  0% {
+    transform: translateX(-50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slidefromDown {
+  0% {
+    transform: translateY(30%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 @media screen and (max-width: 22.5em) {
   .container__project-card {
     flex-direction: column;
