--- a/src/components/navStyles.css
+++ b/src/components/navStyles.css
@@ -105,7 +105,8 @@
   cursor: pointer;
   font-family: "Poppins", sans-serif;
   border-radius: 0px;
-  opacity: 1;
+  animation: slideFromDown 0.6s ease-in-out forwards;
+  opacity: 0;
 }
 
 .navlinks li button hr {
