--- a/src/components/circleProgress.css
+++ b/src/components/circleProgress.css
@@ -34,6 +34,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 1.3rem;
   font-weight: 500;
+  transition: 3.5s;
 }
 
 @media screen and (max-width: 22.5em) {
@@ -65,5 +66,6 @@
   .progress-title {
     font-family: "Lato", sans-serif;
     font-weight: 0.8rem;
+    transition: 3.5s;
   }
 }
