--- a/src/components/projectCardStyles.css
+++ b/src/components/projectCardStyles.css
@@ -5,6 +5,7 @@
   align-items: center;
   border-radius: 20px;
   padding: 1rem;
+  transition: 3.5s;
   box-shadow: 2px 4px 10px #acacac;
 }
 
@@ -24,17 +25,20 @@
   flex-direction: column;
   gap: 1rem;
   padding: 3rem;
+  transition: 3.5s;
 }
 
 .project__info h2 {
   font-family: "Poppins", sans-serif;
   font-size: 1.3rem;
+  transition: 3.5s;
 }
 
 .project__info p {
   font-family: "Lato", sans-serif;
   font-size: 1rem;
   line-height: 25px;
+  transition: 3.5s;
 }
 
 .tech-stack {
@@ -51,6 +55,7 @@
   color: #2e2e2e;
   padding: 0.7rem;
   font-family: "Lato", sans-serif;
+  transition: 3.5s;
 }
 
 .project__btns {
@@ -69,10 +74,12 @@
   border-radius: 10px;
   border: 2px solid #2e2e2e;
   color: #2e2e2e;
+  transition: 3.5s;
 }
 
 .odd-card {
   flex-direction: row-reverse;
+  transition: 3.5s;
 }
 
 @keyframes slidefromRight {
