--- a/src/components/transitionStyles.css
+++ b/src/components/transitionStyles.css
@@ -1,7 +1,7 @@
 .cards {
   height: 100vh;
   width: 100%;
-  position: absolute;
+  position: fixed;
   z-index: 15;
   transform: translateX(-100%);
 }
@@ -11,7 +11,6 @@
   width: 100%;
   background-color: #ff613e;
   position: fixed;
-  animation: slideLeft 2.5s ease-in-out backwards;
   z-index: 20;
 }
 
@@ -20,8 +19,6 @@
   width: 100%;
   background-color: #fff;
   position: fixed;
-  animation: slideLeft 2.5s ease-in-out backwards;
-  animation-delay: 0.2s;
   z-index: 18;
 }
 
@@ -30,8 +27,20 @@
   width: 100%;
   background-color: #212121;
   position: fixed;
-  animation: slideLeft 2.5s ease-in-out;
   z-index: 16;
+}
+
+.card1animate {
+  animation: slideLeft 2.5s ease-in-out backwards;
+}
+
+.card2animate {
+  animation: slideLeft 2.5s ease-in-out backwards;
+  animation-delay: 0.2s;
+}
+
+.card3animate {
+  animation: slideLeft 2.5s ease-in-out;
   animation-delay: 0.4s;
 }
 
