--- a/src/components/skillStyles.css
+++ b/src/components/skillStyles.css
@@ -17,8 +17,10 @@
   width: 8rem;
   height: 2.5rem;
   text-align: center;
-  border: 3px solid rgb(103, 103, 103);
-  border-radius: 25px;
+  background-color: #cccccc;
+  color: #212121;
+  border: none;
+  border-radius: 15px;
   font-family: "Poppins", sans-serif;
   font-weight: 560;
   font-size: 1rem;
@@ -104,8 +106,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
-  margin-bottom: 4rem;
+  gap: 1rem;
+  margin-bottom: 2.8rem;
   align-items: center;
 }
 
