--- a/src/components/projectCardStyles.css
+++ b/src/components/projectCardStyles.css
@@ -71,12 +71,25 @@
   border-radius: 10px;
   border: 2px solid #2e2e2e;
   color: #2e2e2e;
+  padding: 0.5rem;
+  font-size: 0.8rem;
+  font-family: "Poppins", sans-serif;
   transition: 3.5s;
 }
 
 .odd-card {
   flex-direction: row-reverse;
   transition: 3.5s;
+}
+
+.demo {
+  padding: 0.5rem;
+  font-size: 0.8rem;
+  font-family: "Poppins", sans-serif;
+  background-color: #ff613e;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
 }
 
 @keyframes slidefromRight {
