--- a/src/components/heroStyles.css
+++ b/src/components/heroStyles.css
@@ -6,16 +6,17 @@
 
 .container__hero {
   width: 100%;
-  min-height: 37rem;
+  min-height: 100vh;
   background-color: #fff;
   padding-top: 6rem;
   padding-left: 8rem;
   padding-right: 8rem;
+  padding-bottom: 2rem;
   display: flex;
-  flex-direction: row;
-  position: relative;
+  flex-direction: row-reverse;
   transition: 3.5s;
-  /* gap: 5rem; */
+  position: relative;
+  gap: 5rem;
 }
 
 .intro {
@@ -56,7 +57,7 @@
   display: flex;
   flex-direction: row;
   gap: 1.2rem;
-  margin-top: 1.5rem;
+  margin-top: 3rem;
 }
 
 .second {
@@ -84,12 +85,29 @@
   font-family: "Poppins", sans-serif;
   letter-spacing: 1.5px;
   cursor: pointer;
+  box-shadow: 6px 6px 10px #a3a3a3;
+  transition: 3s;
 }
 
 .picture {
   width: 50%;
-  position: relative;
   z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: 3s;
+  position: relative;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.picture img {
+  height: 100%;
+  width: 100%;
+}
+
+.hero-list-icons {
+  position: absolute;
 }
 
 .blob {
@@ -125,6 +143,30 @@
   top: -100%;
   transform: rotateZ(70deg);
   animation: blob2animate 40s ease-in-out infinite;
+}
+
+.hero-list-icons {
+  display: flex;
+  flex-direction: row;
+  gap: 0.8rem;
+}
+
+.hero-footer-icon-btn {
+  display: grid;
+  place-items: center;
+  padding: 0.5rem;
+  background-color: transparent;
+  border: none;
+}
+
+.hero-footer-icon-btn .icon {
+  height: 2rem;
+  width: 2rem;
+  color: #fff;
+}
+
+.picture img {
+  transition: 3s;
 }
 
 @keyframes blob2animate {
@@ -174,7 +216,7 @@
 
 @media screen and (max-width: 22.5em) {
   .container__hero {
-    flex-direction: column;
+    flex-direction: column-reverse;
     padding: 2rem 2rem;
     margin-top: 3.8rem;
     gap: 1rem;
@@ -182,11 +224,13 @@
 
   .intro {
     width: 100%;
+    height: 80vh;
   }
 
   .picture {
     width: 100%;
-    height: 35rem;
+    gap: 5rem;
+    height: 80vh;
   }
 
   .intro h1 {
@@ -208,7 +252,7 @@
   }
 
   .located {
-    margin-top: 1rem;
+    margin-top: 2rem;
   }
 
   .blob3 {
@@ -223,5 +267,20 @@
   .btns-hero {
     width: 100%;
     justify-content: space-between;
+    margin-top: 5rem;
+  }
+
+  .bottom-h3 {
+    margin-bottom: 2.5rem;
+  }
+
+  .picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .picture img {
+    width: 100%;
   }
 }
