--- a/src/components/heroStyles.css
+++ b/src/components/heroStyles.css
@@ -100,11 +100,6 @@
   gap: 2rem;
 }
 
-.picture img {
-  height: 100%;
-  width: 100%;
-}
-
 .hero-list-icons {
   position: absolute;
 }
@@ -168,9 +163,14 @@
   color: #fff;
 }
 
+.hero-footer-icon-btn img {
+  height: 2.5rem;
+  width: 2.5rem;
+}
+
 .picture img {
-  height: 90%;
-  width: 80%;
+  height: 100%;
+  width: 100%;
   opacity: 0;
   animation: imageAppear 5s linear forwards;
 }
@@ -237,7 +237,7 @@
     flex-direction: column-reverse;
     padding: 2rem 2rem;
     margin-top: 3.8rem;
-    gap: 4rem;
+    gap: 5rem;
   }
 
   .intro {
@@ -305,5 +305,10 @@
     flex-direction: row;
     top: 40%;
     left: 10%;
+  }
+
+  .light {
+    left: 5%;
+    top: 38%;
   }
 }
