--- a/src/components/projectCardStyles.css
+++ b/src/components/projectCardStyles.css
@@ -5,6 +5,7 @@
   align-items: center;
   border-radius: 20px;
   padding: 1rem;
+  background-color: #fff;
   box-shadow: 2px 4px 10px #acacac;
 }
 
@@ -15,14 +16,15 @@
 
 .thumbnail img {
   height: 20rem;
-  width: 30rem;
+  width: 35rem;
+  border: 1px solid #1b1b1b;
   border-radius: 20px;
 }
 
 .project__info {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.6rem;
   padding: 3rem;
   transition: 3.5s;
 }
@@ -32,10 +34,10 @@
   font-size: 1.3rem;
 }
 
-.project__info p {
+.project__info .project-desc {
   font-family: "Lato", sans-serif;
   font-size: 1rem;
-  line-height: 25px;
+  line-height: 24px;
 }
 
 .tech-stack {
